Initialize global engine objects after engine.

When execution is stopped, the current engine is removed. Hence,
it is necessary to create it again before setting up global
engine objects.

BUG: 320536